# kunzite

./: .gitignore  Cargo.toml  README.md  clippy.toml  imgui.ini  rustfmt.toml
crates/gui/: Cargo.toml
crates/gui/src/: event.rs  lib.rs  system.rs  textures.rs
crates/imgui-opengl-renderer/: Cargo.toml  build.rs
crates/imgui-opengl-renderer/src/: lib.rs
crates/imgui-sdl2/: Cargo.toml
crates/imgui-sdl2/src/: lib.rs
crates/kunzite/: Cargo.toml
crates/kunzite/src/: audio.rs  emulator.rs  gb.rs  main.rs  ppu.rs  util.rs
crates/kunzite/src/cpu/: decode.rs  instruction.rs  mod.rs  register.rs
crates/kunzite/src/display/: mod.rs
crates/kunzite/src/emulator/: draw.rs  function.rs
crates/kunzite/src/memory/: cartridge.rs  mbc.rs  mod.rs
crates/kunzite/src/memory/mbc/: mbc1.rs  rom_only.rs
roms/disassembly/: bootloader.asm
