[package]
name = "gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git" }
imgui-opengl-renderer = "0.11.0"
imgui-sdl2 = "0.14.0"
sdl2 = { version="0.34.5", features = ["unsafe_textures"] }
gl = "0.14.0"
