[package]
name = "gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git" }
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs.git" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs.git" }
glium = "0.30.2"
